--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -126,9 +126,10 @@
                 padding: 155px 16px 0px 16px;
                 height: 80vh;
                 .Footer-Left-Section{
+                    width: 235px;
                     .Left-Section-Tools{
                         p{
-                            font-size: 20px;
+                            font-size: 16px;
                         }
                     }
                     .Menu-Content{
@@ -136,8 +137,17 @@
                         padding-left: unset;
                         letter-spacing: unset;
                         p{
-                            font-size: 20px;
+                            font-size: 16px;
                             padding-left: 24px;
+                        }
+                    }
+                }
+                .Footer-Midle-Section{
+                    padding-right: 10px;
+                    .Footer-Title-Section{
+                        p{
+                            font-size: 16px;
+                            letter-spacing: 0px;
                         }
                     }
                 }
@@ -153,10 +163,6 @@
                     margin: 4px;
                 }
             }
-        }
-        .hamburger-hider{
-          width: 105px;
-          height: 170px;
         }
     }
 }
