--- a/src/style/Nav.scss
+++ b/src/style/Nav.scss
@@ -287,31 +287,28 @@
                         .Nav-Container{
                             padding: 155px 0px 0px 0px;
                             .Left-Section{
+                                width: 235px;
                                 .Left-Section-Tools{
                                     p{
-                                        font-size: 20px;
+                                        font-size: 16px;
                                     }
                                 }
                                 .Menu-Content{
                                     p{
                                         line-height: 40px;
-                                        font-size: 20px;
+                                        font-size: 16px;
                                         padding-left: 24px;
                                     }
                                 }
                             }
                             .Middle-Section{
-                                display: none;                        
-                            }
-                            .Right-Section{
-                                img{
-                                    height: 125px;
-                                }
+                                padding-right: 10px;
                                 p{
-                                    letter-spacing: 0px;
-                                    font-size: 25px;
-                                }
+                                font-size: 16px;  
+                                letter-spacing: 1px;   
+                                }                
                             }
+                            
                         }
                     }
                     .modal-footer{
