--- a/src/style/Home.scss
+++ b/src/style/Home.scss
@@ -230,6 +230,9 @@
                 padding-right: 20px;
                 display: flex;
                 justify-content: center;
+                .imagerec{
+                    width: 75%;
+                }
                 .parallax3{
                     width: 100%;
                 }
